syntax = "proto3";

package stats.message;

option java_multiple_files = true;
option java_package = "ru.practicum.ewm.stats.grpc";

message InteractionsCountRequestProto {
  repeated int64 event_id = 1;
}
